--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -133,7 +133,7 @@
     "To do this, two steps are missing:\n",
     "\n",
     "1. we have to decide on a weld seam length first (we will use 300 mm in this example)\n",
-    "2. create a trace object that defines the path of our element though space. (we use a simple linear trace in this example)"
+    "2. create a trace object that defines the path of our element through space. (we use a simple linear trace in this example)"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To visualize the geometry we rasterize each profile along specific steps of the trace."
+    "To visualize the geometry we simply call its `plot` function. Since it internally rasterizes the data, we need to provide the raster widths:"
    ]
   },
   {
@@ -182,17 +182,14 @@
    "source": [
     "# rasterize geometry\n",
     "profile_raster_width = 0.5  # resolution of each profile in mm\n",
-    "trace_raster_width = 15  # space between profiles in mm\n",
-    "geometry_data_sp = geometry.rasterize(\n",
-    "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width\n",
-    ")"
+    "trace_raster_width = 15  # space between profiles in mm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simple scatter plot of the geometry"
+    "Here is the plot:"
    ]
   },
   {
@@ -208,28 +205,14 @@
     "    ax.set_xlabel(\"x / mm\")\n",
     "    ax.set_ylabel(\"y / mm\")\n",
     "    ax.set_zlabel(\"z / mm\")\n",
-    "    ax.view_init(30, -5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "ax_setup(ax)"
+    "    ax.view_init(30, -10)\n",
+    "    \n",
+    "color_dict = {\"tcp_contact\": (255, 0, 0), \n",
+    "              \"tcp_wire\": (0, 150, 0),\n",
+    "              \"T1\": (255, 0, 150), \n",
+    "              \"T2\": (255, 150, 150), \n",
+    "              \"T3\": (255, 150, 0), \n",
+    "              \"specimen\": (0, 0, 255)}"
    ]
   },
   {
@@ -238,7 +221,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = geometry.plot(profile_raster_width, trace_raster_width, color = (0, 0, 255), show_wireframe = True, label=\"groove\")\n",
+    "ax = geometry.plot(profile_raster_width, \n",
+    "                   trace_raster_width, \n",
+    "                   color = color_dict[\"specimen\"], \n",
+    "                   show_wireframe = True, \n",
+    "                   label=\"groove\",\n",
+    "                  )\n",
     "ax_setup(ax)"
    ]
   },
@@ -268,7 +256,7 @@
    "source": [
     "The trace we created earlier to extend the groove shape into 3d has its own associated coordinate system that starts in the origin of the groove (see point (0,0) in our first plot of the groove profile) and has the x-axis running along the direction of the weld seam by convention.\n",
     "\n",
-    "We simply add the trace coordinate system to our coordinate system manager defining at as the *workpiece* coordinate system."
+    "We simply add the trace coordinate system to our coordinate system manager defining it as the *workpiece* coordinate system."
    ]
   },
   {
@@ -283,6 +271,22 @@
     "    reference_system_name=\"base\",\n",
     "    lcs=trace.coordinate_system,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have added the workpiece coordinate system to the CSM, we can attach a rasterized representation of our geometry to it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.assign_data(geometry.spatial_data(profile_raster_width, trace_raster_width), \"specimen\" ,\"workpiece\")"
    ]
   },
   {
@@ -445,45 +449,7 @@
    "metadata": {},
    "source": [
     "## plot the TCP trajectory\n",
-    "To examine the movement of our wire TCP and contact tip, lets create a simple plot. We only have a linear movement we don't have to add additional timestamps to the moving coordinate systems."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_contact\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\", marker=\"o\")\n",
-    "\n",
-    "ax_setup(ax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spatial_data_geo = geo.SpatialData.from_geometry(geometry, profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width)\n",
-    "csm.assign_data(spatial_data_geo, \"specimen\" ,\"workpiece\")"
+    "To examine the movement of our wire TCP and contact tip, lets create a simple plot. We only have a linear movement so we don't have to add additional timestamps to the moving coordinate systems to increase the resolution of the traces."
    ]
   },
   {
@@ -494,19 +460,12 @@
    "source": [
     "ax = csm.plot(coordinate_systems=[\"tcp_contact\", \"tcp_wire\"], \n",
     "         limits=[(0, 300), (-5, 5), (0, 12)], \n",
-    "         colors={\"tcp_contact\": (255, 0, 0), \"tcp_wire\": (0, 150, 0), \"specimen\": (0, 0, 255)},\n",
+    "         colors=color_dict,\n",
     "         show_vectors=False,\n",
     "         show_wireframe=True,\n",
     "        )\n",
     "ax_setup(ax)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -534,11 +493,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for T in [\"T1\", \"T2\", \"T3\"]:\n",
-    "    cs = csm.get_cs(T, \"workpiece\")\n",
-    "    data = cs.coordinates.data\n",
-    "    ax.scatter(data[0], data[1], data[2], label=T, c=\"orange\", marker=\"o\")\n",
-    "ax.legend()"
+    "ax = csm.plot(coordinate_systems=[\"T1\", \"T2\", \"T3\"], \n",
+    "         reference_system=\"workpiece\",\n",
+    "         limits=[(0, 300), (-5, 5), (0, 12)], \n",
+    "         colors=color_dict,\n",
+    "        show_vectors=False,\n",
+    "        show_wireframe=True)\n",
+    "ax_setup(ax)"
    ]
   },
   {
@@ -548,6 +509,35 @@
    "outputs": [],
    "source": [
     "csm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "source": [
+    "## K3D Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "csm.plot(backend=\"k3d\", \n",
+    "         coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"], \n",
+    "         colors=color_dict,\n",
+    "         limits=[[-5,150]], \n",
+    "         show_vectors=False, \n",
+    "         show_traces=True,\n",
+    "         show_data_labels=False,\n",
+    "         show_labels=False, \n",
+    "         show_origins=True)\n"
    ]
   },
   {
