Update second welding example

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -154,7 +154,10 @@
     "csm = weldx.transformations.CoordinateSystemManager(\"base\")\n",
     "\n",
     "# add the workpiece coordinate system\n",
-    "csm.add_cs(coordinate_system_name=\"workpiece\", reference_system_name=\"base\", lcs=trace.coordinate_system)"
+    "csm.add_cs(coordinate_system_name=\"workpiece\", reference_system_name=\"base\", lcs=trace.coordinate_system)\n",
+    "\n",
+    "# add the geometry data of the specimen\n",
+    "csm.assign_data(geometry.spatial_data(profile_raster_width, trace_raster_width), \"specimen\" ,\"workpiece\")"
    ]
   },
   {
@@ -213,11 +216,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ax_setup(ax):\n",
+    "def ax_setup(ax, rotate = 170):\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"x / mm\")\n",
     "    ax.set_ylabel(\"y / mm\")\n",
-    "    ax.set_zlabel(\"z / mm\")"
+    "    ax.set_zlabel(\"z / mm\")\n",
+    "    ax.view_init(30, rotate)\n",
+    "    ax.legend()\n",
+    "\n",
+    "color_dict = {\"tcp_sine\": (255, 0, 0),\n",
+    "              \"tcp_wire_sine\": (255, 0, 0),\n",
+    "              \"tcp_wire_sine2\": (255, 0, 0),\n",
+    "              \"tcp_wire\": (0, 150, 0),\n",
+    "              \"specimen\": (0, 0, 255)}"
    ]
   },
   {
@@ -226,21 +237,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "\n",
-    "cs = cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
-    "\n",
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,140),(-5,5),(0,12)],\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=True)\n",
     "ax_setup(ax)"
    ]
   },
@@ -324,25 +325,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_sine\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\")\n",
-    "\n",
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,140),(-5,5),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=True)\n",
+    "ax_setup(ax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here a little bit closer to see the actual sine wave:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,5),(-2,2),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=False)\n",
     "ax_setup(ax)"
    ]
   },
@@ -392,25 +402,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire_sine\", \"workpiece\")\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\")\n",
-    "\n",
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,140),(-5,5),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=True)\n",
+    "ax_setup(ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,5),(-2,2),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=False)\n",
     "ax_setup(ax)"
    ]
   },
@@ -426,7 +438,7 @@
    "metadata": {},
    "source": [
     "## plot with time interpolation\n",
-    "Sometimes we might only be interested in a specific time range of the experiment or we want to change the time resolution. For this we can use the time interpolation methods of the coordinate systems (or the CSM).\n",
+    "Sometimes we might only be interested in a specific time range of the experiment or we want to change the time resolution. For this we can use the time interpolation methods of the CSM (or the coordinate systems).\n",
     "\n",
     "Let's say we want to weave only 8 seconds of our experiment (starting from 2020-04-20 10:03:00) but interpolate steps of 1 ms."
    ]
@@ -437,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_interp = pd.timedelta_range(start=\"0s\", end=\"11s\", freq=\"1ms\")"
+    "t_interp = pd.timedelta_range(start=\"3s\", end=\"11s\", freq=\"1ms\")"
    ]
   },
   {
@@ -446,25 +458,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection=\"3d\", proj_type=\"ortho\")\n",
-    "ax.scatter(\n",
-    "    geometry_data_sp[0, :],\n",
-    "    geometry_data_sp[1, :],\n",
-    "    geometry_data_sp[2, :],\n",
-    "    marker=\".\",\n",
-    "    c=\"b\",\n",
-    "    label=\"groove\",\n",
-    ")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\").interp_time(t_interp)\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\")\n",
-    "\n",
-    "cs = csm.get_cs(\"tcp_wire_sine\", \"workpiece\").interp_time(t_interp)\n",
-    "data = cs.coordinates.data\n",
-    "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire_sine\", c=\"r\")\n",
-    "\n",
+    "ax = csm.interp_time(t_interp).plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,140),(-5,5),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,\n",
+    "              show_wireframe=True)\n",
     "ax_setup(ax)"
    ]
   },
@@ -558,6 +557,34 @@
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire_sine2\", c=\"r\")\n",
     "\n",
     "ax_setup(ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(0,140),(-5,5),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False,)\n",
+    "ax_setup(ax, rotate=110)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
+    "              colors=color_dict,\n",
+    "              limits=[(60,100),(-2,2),(0,12)],\n",
+    "              show_origins=False,\n",
+    "              show_vectors=False)\n",
+    "ax_setup(ax, rotate=110)"
    ]
   },
   {
