--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -295,7 +295,8 @@
    "source": [
     "geometry = Geometry(profile=profile, trace=trace)\n",
     "geometry.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "              trace_raster_width=Q_(10, \"cm\"))\n",
+    "              trace_raster_width=Q_(10, \"cm\"),\n",
+    "              show_wireframe=False)\n",
     "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\")"
    ]
   },
@@ -394,8 +395,8 @@
     "                            )\n",
     "\n",
     "geometry_vp = Geometry(profile=v_profile,trace=trace)\n",
-    "geometry_vp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "                 trace_raster_width=Q_(8, \"cm\"))"
+    "#geometry_vp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
+    "#                 trace_raster_width=Q_(8, \"cm\"))"
    ]
   },
   {
@@ -483,9 +484,16 @@
     "trace_custom_interp = Trace(LinearHorizontalTraceSegment(Q_(20, \"cm\")))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "                            trace_raster_width=Q_(2, \"cm\"))"
+    "#geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
+    "#                            trace_raster_width=Q_(2, \"cm\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
