slightly change plot parameters and axis limits

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(4, \"mm\")), trace)"
+    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)"
    ]
   },
   {
@@ -206,6 +206,8 @@
     "    ax.set_ylabel(\"y / mm\")\n",
     "    ax.set_zlabel(\"z / mm\")\n",
     "    ax.view_init(30, -10)\n",
+    "    ax.set_ylim([-5.5,5.5])\n",
+    "    ax.set_zlim([0,13])\n",
     "    \n",
     "color_dict = {\"tcp_contact\": (255, 0, 0), \n",
     "              \"tcp_wire\": (0, 150, 0),\n",
@@ -492,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"T1\", \"T2\", \"T3\"], \n",
+    "ax = csm.plot(coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"], \n",
     "         reference_system=\"workpiece\",\n",
     "         colors=color_dict,\n",
     "        show_vectors=False,\n",
@@ -589,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
