--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -206,15 +206,18 @@
     "    ax.set_ylabel(\"y / mm\")\n",
     "    ax.set_zlabel(\"z / mm\")\n",
     "    ax.view_init(30, -10)\n",
-    "    ax.set_ylim([-5.5,5.5])\n",
-    "    ax.set_zlim([0,13])\n",
-    "    \n",
-    "color_dict = {\"tcp_contact\": (255, 0, 0), \n",
-    "              \"tcp_wire\": (0, 150, 0),\n",
-    "              \"T1\": (255, 0, 150), \n",
-    "              \"T2\": (255, 150, 150), \n",
-    "              \"T3\": (255, 150, 0), \n",
-    "              \"specimen\": (0, 0, 255)}"
+    "    ax.set_ylim([-5.5, 5.5])\n",
+    "    ax.set_zlim([0, 13])\n",
+    "\n",
+    "\n",
+    "color_dict = {\n",
+    "    \"tcp_contact\": (255, 0, 0),\n",
+    "    \"tcp_wire\": (0, 150, 0),\n",
+    "    \"T1\": (255, 0, 150),\n",
+    "    \"T2\": (255, 150, 150),\n",
+    "    \"T3\": (255, 150, 0),\n",
+    "    \"specimen\": (0, 0, 255),\n",
+    "}"
    ]
   },
   {
@@ -223,12 +226,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = geometry.plot(profile_raster_width, \n",
-    "                   trace_raster_width, \n",
-    "                   color = color_dict[\"specimen\"], \n",
-    "                   show_wireframe = True, \n",
-    "                   label=\"groove\",\n",
-    "                  )\n",
+    "ax = geometry.plot(\n",
+    "    profile_raster_width,\n",
+    "    trace_raster_width,\n",
+    "    color=color_dict[\"specimen\"],\n",
+    "    show_wireframe=True,\n",
+    "    label=\"groove\",\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -288,7 +292,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.assign_data(geometry.spatial_data(profile_raster_width, trace_raster_width), \"specimen\" ,\"workpiece\")"
+    "csm.assign_data(\n",
+    "    geometry.spatial_data(profile_raster_width, trace_raster_width),\n",
+    "    \"specimen\",\n",
+    "    \"workpiece\",\n",
+    ")"
    ]
   },
   {
@@ -460,11 +468,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_contact\", \"tcp_wire\"], \n",
-    "         colors=color_dict,\n",
-    "         show_vectors=False,\n",
-    "         show_wireframe=True,\n",
-    "        )\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_contact\", \"tcp_wire\"],\n",
+    "    colors=color_dict,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -494,11 +503,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"], \n",
-    "         reference_system=\"workpiece\",\n",
-    "         colors=color_dict,\n",
-    "        show_vectors=False,\n",
-    "        show_wireframe=True)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"],\n",
+    "    reference_system=\"workpiece\",\n",
+    "    colors=color_dict,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -528,16 +539,17 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "csm.plot(backend=\"k3d\", \n",
-    "         coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"], \n",
-    "         colors=color_dict,\n",
-    "         limits=[[-5,150]], \n",
-    "         show_vectors=False, \n",
-    "         show_traces=True,\n",
-    "         show_data_labels=False,\n",
-    "         show_labels=False, \n",
-    "         show_origins=True)\n"
+    "csm.plot(\n",
+    "    backend=\"k3d\",\n",
+    "    coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[[-5, 150]],\n",
+    "    show_vectors=False,\n",
+    "    show_traces=True,\n",
+    "    show_data_labels=False,\n",
+    "    show_labels=False,\n",
+    "    show_origins=True,\n",
+    ")"
    ]
   },
   {
