update welding example 2 parameters

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -127,11 +127,11 @@
     "trace = geo.Trace(trace_segment)\n",
     "\n",
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(4, \"mm\")), trace)\n",
+    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)\n",
     "\n",
     "# rasterize geometry\n",
-    "profile_raster_width = 0.5  # resolution of each profile in mm\n",
-    "trace_raster_width = 15  # space between profiles in mm\n",
+    "profile_raster_width = 2  # resolution of each profile in mm\n",
+    "trace_raster_width = 30  # space between profiles in mm\n",
     "geometry_data_sp = geometry.rasterize(\n",
     "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width\n",
     ")"
@@ -221,6 +221,8 @@
     "    ax.set_xlabel(\"x / mm\")\n",
     "    ax.set_ylabel(\"y / mm\")\n",
     "    ax.set_zlabel(\"z / mm\")\n",
+    "    ax.view_init(30, -10)\n",
+    "    ax.set_ylim([-5.5, 5.5])\n",
     "    ax.view_init(30, rotate)\n",
     "    ax.legend()\n",
     "\n",
@@ -259,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = ut.sine(f = Q_(1.5 * 2 * np.pi, \"Hz\"), amp = Q_([[0, 0.75, 0]], \"mm\"))"
+    "ts_sine = ut.sine(f = Q_(0.5 * 2 * np.pi, \"Hz\"), amp = Q_([[0, 0.75, 0]], \"mm\"))"
    ]
   },
   {
@@ -602,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
