update example2 k3d plot and fix linestyle

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -581,10 +581,17 @@
    },
    "outputs": [],
    "source": [
-    "try:\n",
-    "    csm.plot(backend=\"k3d\", limits=[[-5,150]], coordinate_systems=[\"base\", \"workpiece\", \"tcp_wire_sine2\"], show_vectors=False, show_traces=True, show_labels=False, show_origins=True)\n",
-    "except:\n",
-    "    pass"
+    "csm.plot(\n",
+    "    backend=\"k3d\",\n",
+    "    coordinate_systems=[\"tcp_wire_sine2\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[[-5, 150]],\n",
+    "    show_vectors=False,\n",
+    "    show_traces=True,\n",
+    "    show_data_labels=False,\n",
+    "    show_labels=False,\n",
+    "    show_origins=True,\n",
+    ")"
    ]
   }
  ],
