example2 code formatting

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -46,10 +46,9 @@
    "outputs": [],
    "source": [
     "# some python imports that will be used throughout the tutorial\n",
-    "import numpy as np\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import pint\n",
     "import xarray as xr\n",
@@ -154,10 +153,18 @@
     "csm = weldx.transformations.CoordinateSystemManager(\"base\")\n",
     "\n",
     "# add the workpiece coordinate system\n",
-    "csm.add_cs(coordinate_system_name=\"workpiece\", reference_system_name=\"base\", lcs=trace.coordinate_system)\n",
+    "csm.add_cs(\n",
+    "    coordinate_system_name=\"workpiece\",\n",
+    "    reference_system_name=\"base\",\n",
+    "    lcs=trace.coordinate_system,\n",
+    ")\n",
     "\n",
     "# add the geometry data of the specimen\n",
-    "csm.assign_data(geometry.spatial_data(profile_raster_width, trace_raster_width), \"specimen\" ,\"workpiece\")"
+    "csm.assign_data(\n",
+    "    geometry.spatial_data(profile_raster_width, trace_raster_width),\n",
+    "    \"specimen\",\n",
+    "    \"workpiece\",\n",
+    ")"
    ]
   },
   {
@@ -188,9 +195,7 @@
     "\n",
     "coords = [tcp_start_point.magnitude, tcp_end_point.magnitude]\n",
     "\n",
-    "tcp_wire = lcs(\n",
-    "    coordinates=coords, orientation=rot, time=[t_start, t_end]\n",
-    ")"
+    "tcp_wire = lcs(coordinates=coords, orientation=rot, time=[t_start, t_end])"
    ]
   },
   {
@@ -206,7 +211,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.add_cs(coordinate_system_name=\"tcp_wire\", reference_system_name=\"workpiece\", lcs=tcp_wire)\n",
+    "csm.add_cs(\n",
+    "    coordinate_system_name=\"tcp_wire\", reference_system_name=\"workpiece\", lcs=tcp_wire\n",
+    ")\n",
     "csm"
    ]
   },
@@ -216,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ax_setup(ax, rotate = 170):\n",
+    "def ax_setup(ax, rotate=170):\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"x / mm\")\n",
     "    ax.set_ylabel(\"y / mm\")\n",
@@ -226,11 +233,14 @@
     "    ax.view_init(30, rotate)\n",
     "    ax.legend()\n",
     "\n",
-    "color_dict = {\"tcp_sine\": (255, 0, 0),\n",
-    "              \"tcp_wire_sine\": (255, 0, 0),\n",
-    "              \"tcp_wire_sine2\": (255, 0, 0),\n",
-    "              \"tcp_wire\": (0, 150, 0),\n",
-    "              \"specimen\": (0, 0, 255)}"
+    "\n",
+    "color_dict = {\n",
+    "    \"tcp_sine\": (255, 0, 0),\n",
+    "    \"tcp_wire_sine\": (255, 0, 0),\n",
+    "    \"tcp_wire_sine2\": (255, 0, 0),\n",
+    "    \"tcp_wire\": (0, 150, 0),\n",
+    "    \"specimen\": (0, 0, 255),\n",
+    "}"
    ]
   },
   {
@@ -239,11 +249,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,140),(-5,5),(0,12)],\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=True)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 140), (-5, 5), (0, 12)],\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -261,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = ut.sine(f = Q_(0.5 * 2 * np.pi, \"Hz\"), amp = Q_([[0, 0.75, 0]], \"mm\"))"
+    "ts_sine = ut.sine(f=Q_(0.5 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0.75, 0]], \"mm\"))"
    ]
   },
   {
@@ -278,7 +290,7 @@
    "outputs": [],
    "source": [
     "t = pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")\n",
-    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine,t)"
+    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine, t)"
    ]
   },
   {
@@ -310,7 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.add_cs(coordinate_system_name=\"tcp_sine\", reference_system_name=\"tcp_wire\", lcs=tcp_sine)\n",
+    "csm.add_cs(\n",
+    "    coordinate_system_name=\"tcp_sine\", reference_system_name=\"tcp_wire\", lcs=tcp_sine\n",
+    ")\n",
     "csm"
    ]
   },
@@ -327,12 +341,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,140),(-5,5),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=True)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 140), (-5, 5), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -349,12 +365,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,5),(-2,2),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=False)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 5), (-2, 2), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=False,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -404,12 +422,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,140),(-5,5),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=True)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 140), (-5, 5), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -419,12 +439,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,5),(-2,2),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=False)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 5), (-2, 2), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=False,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -460,12 +482,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.interp_time(t_interp).plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,140),(-5,5),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,\n",
-    "              show_wireframe=True)\n",
+    "ax = csm.interp_time(t_interp).plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 140), (-5, 5), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    "    show_wireframe=True,\n",
+    ")\n",
     "ax_setup(ax)"
    ]
   },
@@ -486,7 +510,7 @@
     "ts_sine = ut.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))\n",
     "\n",
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
-    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine,t)\n",
+    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine, t)\n",
     "tcp_sine2 = lcs(coordinates=ts_sine_data)"
    ]
   },
@@ -512,7 +536,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_interp = pd.timedelta_range(start=tcp_wire.time[0].values, end=tcp_wire.time[-1].values, freq=\"20ms\")"
+    "t_interp = pd.timedelta_range(\n",
+    "    start=tcp_wire.time[0].values, end=tcp_wire.time[-1].values, freq=\"20ms\"\n",
+    ")"
    ]
   },
   {
@@ -542,11 +568,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(0,140),(-5,5),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False,)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(0, 140), (-5, 5), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    ")\n",
     "ax_setup(ax, rotate=110)"
    ]
   },
@@ -556,11 +584,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = csm.plot(coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
-    "              colors=color_dict,\n",
-    "              limits=[(60,100),(-2,2),(0,12)],\n",
-    "              show_origins=False,\n",
-    "              show_vectors=False)\n",
+    "ax = csm.plot(\n",
+    "    coordinate_systems=[\"tcp_wire\", \"tcp_wire_sine2\"],\n",
+    "    colors=color_dict,\n",
+    "    limits=[(60, 100), (-2, 2), (0, 12)],\n",
+    "    show_origins=False,\n",
+    "    show_vectors=False,\n",
+    ")\n",
     "ax_setup(ax, rotate=110)"
    ]
   },
