Apply quick fix to geometry tutorial.

--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "geometry = Geometry(profile=profile, trace=trace)\n",
-    "geometry.plot(profile_raster_width=Q_(1, \"cm\"),\n",
+    "geometry.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
     "              trace_raster_width=Q_(10, \"cm\"),\n",
     "              show_wireframe=False)\n",
     "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\")"
@@ -395,8 +395,8 @@
     "                            )\n",
     "\n",
     "geometry_vp = Geometry(profile=v_profile,trace=trace)\n",
-    "#geometry_vp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "#                 trace_raster_width=Q_(8, \"cm\"))"
+    "geometry_vp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
+    "                 trace_raster_width=Q_(8, \"cm\"))"
    ]
   },
   {
@@ -484,8 +484,8 @@
     "trace_custom_interp = Trace(LinearHorizontalTraceSegment(Q_(20, \"cm\")))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "#geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "#                            trace_raster_width=Q_(2, \"cm\"))"
+    "geometry_custom_interp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
+    "                            trace_raster_width=Q_(2, \"cm\"))"
    ]
   },
   {
